--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
-    "angular-fullscreen": "*"
+    "angular-fullscreen": "*",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
