--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "angular-fullscreen": "*",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.2.0"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.2.0",
+    "angular-ui-codemirror": "0.1.1",
+    "angular-highlightjs": "0.2.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
