--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
+    "connect-modrewrite": "0.7.5",
     "grunt-manifest": "*"
   },
   "engines": {
